--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -82,6 +82,17 @@ doi="10.1023/A:1010933404324",
 url="http://dx.doi.org/10.1023/A:1010933404324"
 }
 
+@article{breiman-arcingclassifiers,
+  author = {Breiman, L.},
+  journal = {ANNALS OF STATISTICS},
+  keywords = {machine_learning},
+  pages = {801--823},
+  publisher = {IMS INSTITUTE OF MATHEMATICAL STATISTICS},
+  title = {{Arcing classifiers}},
+  volume = 26,
+  year = 1998
+}
+
 
 @book{Mitchell-MLearning,
   title = {{Machine Learning}},
