--- a/section_scikit_docs_Differnet_works__.tex
+++ b/section_scikit_docs_Differnet_works__.tex
@@ -1,7 +1,9 @@
 \section{scikit-docs}
 
-Differnet works have explored on low-bias and high-variance scenarios. Strongly related to models with low training error and high test errors.  \cite{breiman-arcingclassifiers] gives a more accurate description of this problem on real data. In some cases \begin{quote} ..small perturbations in
-their  training  sets  or  in  construction  may  result  in  large  changes  in  the  constructed  predictor\end{quote}.
+Differnet works have explored on low-bias and high-variance scenarios. Strongly related to models with low training error and high test errors.  \cite{breiman-arcingclassifiers] gives a more accurate description of this problem on real data. In some cases \texit{..small perturbations in
+their  training  sets  or  in  construction  may  result  in  large  changes  in  the  constructed  predictor}.
+
+
 
 By combining the predictions of a set of base learners the overall generalization error of the aggregated learner will be improved. The two most common ways of building ensemble classifiers are by averaging or by boosting the base learners. Random Forests are an example of the former, where base estimators are built as uncorrelated or independent as possible and then the predictions are averaged out for an overall prediction. In the second case predictors are built in a sequential by adding new estimators are added to the overall set in such a way that the misclassification rate is lowered at each step.
 
