--- a/section_scikit_docs_Differnet_works__.tex
+++ b/section_scikit_docs_Differnet_works__.tex
@@ -1,6 +1,6 @@
 \section{scikit-docs}
 
-Differnet works have explored on low-bias and high-variance scenarios. Strongly related to models with low training error and high test errors.  \cite{breiman-arcingclassifiers] gives a more accurate description of this problem on real data. In some cases \texit{..small perturbations in
+Differnet works have explored on low-bias and high-variance scenarios. Strongly related to models with low training error and high test errors.  \cite{breiman-arcingclassifiers] gives a more accurate description of this problem on real data. In some cases \textit{..small perturbations in
 their  training  sets  or  in  construction  may  result  in  large  changes  in  the  constructed  predictor}.
 
 
