--- a/subsection_Classification_Scoring_Metrics_Metrics__.tex
+++ b/subsection_Classification_Scoring_Metrics_Metrics__.tex
@@ -6,9 +6,9 @@ There are a number of different variations of classification metrics where diffe
 
 \subsubsection{Contingency Table}
 
-In a binary classification notation, the models' target outcomes $\hat{y}$ can be put into the positive (\textit{T}) or false (\textit{F}) categories whereas actual data is grouped into the true (\textit{T}) or false (\textit{F}) categories. A contingency table would then count the amunt of samples that fall into one of the four groups derived from the comparison between the model's expectation and the observed data. 
+In a binary classification notation, the models' target outcomes $\hat{y}$ can be put into the positive (\textit{T}) or false (\textit{F}) categories whereas actual data is grouped into the true (\textit{T}) or false (\textit{F}) categories. A contingency table would then count the amount of samples that fall into one of the four groups derived from the comparison between the model's expectation and the observed data. 
 
-
+TABLAA
 Some metrics have been 
 
 $https://en.wikipedia.org/wiki/Receiver_operating_characteristic$
