--- a/header.tex
+++ b/header.tex
@@ -29,6 +29,5 @@
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{corollary}{Corollary}[theorem]
 \newtheorem{lemma}[theorem]{Lemma}
-
+\newtheorem{definition}{Definition}[subsection]
 \theoremstyle{definition}
-\newtheorem{definition}{Definition}[section]
