--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -232,3 +232,17 @@ url="http://dx.doi.org/10.1023/A:1010933404324"
     publisher = {IEEE Computer Society},
    
 }
+
+@Article{james-biasVarianceGeneral,
+author="James, Gareth M.",
+title="Variance and Bias for General Loss Functions",
+journal="Machine Learning",
+year="2003",
+volume="51",
+number="2",
+pages="115--135",
+issn="1573-0565",
+doi="10.1023/A:1022899518027",
+url="http://dx.doi.org/10.1023/A:1022899518027"
+}
+
